--- a/package.json
+++ b/package.json
@@ -20,19 +20,30 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/base64-to-gallery": "^4.4.2",
+    "@ionic-native/camera": "^4.4.2",
     "@ionic-native/camera-preview": "^4.3.3",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/file": "^4.4.2",
+    "@ionic-native/file-path": "^4.4.2",
+    "@ionic-native/http": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/transfer": "^3.14.0",
     "@ionic/pro": "1.0.12",
     "@ionic/storage": "2.1.3",
     "cordova-android": "6.3.0",
+    "cordova-base64-to-gallery": "^4.1.3",
+    "cordova-plugin-advanced-http": "^1.9.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-camera-preview": "^0.9.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -51,7 +62,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-camera-preview": {}
+      "cordova-plugin-camera-preview": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-base64-to-gallery": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
